# apilar

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  line-habitats.json  parameters.md  topology2.json  topology3.json  topology4.json  two-habitats-config.json  two-habitats-one-starts-empty-config.json
config/: line-habitats-different-rules.json  line-habitats-with-disaster.json  simple-config.json  square-8-less-m-dis.json  square-8-less-m.json  square-8-less.json  square-8.json  two-habitats-one-enormous.json
doc/: language.md
sample_code/: descendant.apil  head-world-replicator-documented.apil  head-world-replicator.apil  later-descendant.apil
sample_code/evolved/: dynamic.apil  sample-n0.apil  sample-n1.apil  sample-n2.apil  sample0.apil  sample1.apil  sample10.apil  sample11.apil  sample12.apil  sample13.apil  sample14.apil  sample15.apil  sample16.apil  sample17.apil  sample18.apil  sample19.apil  sample2.apil  sample20.apil  sample21.apil  sample22.apil  sample23.apil  sample24.apil  sample25.apil  sample26.apil  sample27.apil  sample28.apil  sample29.apil  sample3.apil  sample30.apil  sample31.apil  sample32.apil  sample4.apil  sample5.apil  (+8 more)
src/: assembler.rs  client_command.rs  computer.rs  config.rs  configuration.rs  direction.rs  habitat.rs  info.rs  instruction.rs  island.rs  main.rs  memory.rs  newworld.rs  processor.rs  rectangle.rs  render.rs  run.rs  serve.rs  simulation.rs  single.rs  starter.rs  testutil.rs  ticks.rs  topology.rs  want.rs  world.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+15 files in other folders)
